<resources>
    <string name="app_name">EV3 BT Controller</string>
    <string name="action_settings">Settings</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="stop">Stop</string>
    <string name="title_activity_connect_page">ConnectPage</string>
    <string name="LeJOS_address">Lejos Address: </string>
    <string name="_10_0_1_1">10.0.1.1</string>
    <string name="connect">Connect</string>
    <string name="currently_connected_to">Currently Connected To:</string>
    <string name="not_connected">Not Connected</string>
    <string name="current_direction">Current Direction:</string>
    <string name="ev3_name">EV3 Bluetooth Name:</string>
    <string name="done_training">Load Saved BSOC</string>
    <string name="shrink_factor">Shrink Factor</string>
    <string name="bsoc_number">BSOC Number</string>
    <string name="select_newest_bsoc">Select Newest BSOC</string>
    <string name="BSOC_popUp_title">Select a BSOC</string>
    <string name="delay">Delay:</string>
    <string name="_0">0</string>
    <string name="live_preview">Live Preview</string>
    <string name="average_delay">Average Delay:</string>
    <string name="save_delays">Save Delays</string>
</resources>
